# pacific-dems

./: .gitignore  README.md  environment.yml  pyproject.toml
notebooks_create_dems/: Cook_Islands.ipynb  Fiji.ipynb  Republic_of_Marshall_Islands.ipynb  Samoa.ipynb  Tonga.ipynb  Tuvalu.ipynb  Tuvalu_.ipynb  Vanuatu.ipynb
py_scripts/: create_dem_functions.py  islands.py
src/pacific-dems/: create_data_paths.py  create_dem_functions.py  islands.py
